# tmpfile-Android

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  UpcomingReleaseNotes.md  build.gradle  dobuild  dobuild-sampleapp  doclean  doincrementversion  dorelease  dosyncversions  getVersion.sh  gradle.properties  jitpack.yml  settings.gradle
.github/: installAndroidTools.sh  prepareSampleAppForUnpublishedLib.sh
.github/workflows/: android.yml  build.yml  debugBuild.yml  manualVersionIncrement_major.yml  manualVersionIncrement_minor.yml  manualVersionIncrement_patch.yml  privilegedBuild.yml  publishRelease.yml  release.yml  releaseBuild.yml  unprivilegedBuild.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/tests/src/androidTest/java/com/viliussutkus89/tmpfile/tests/: NoLeftoverTmpfilesBeforeTests.java  TmpfileInstrumentedTests.java
android/tests/src/main/: AndroidManifest.xml
android/tests/src/main/cpp/: CMakeLists.txt  nativeUnitTests.cpp
android/tmpfile/: build.gradle
android/tmpfile/src/main/: AndroidManifest.xml
android/tmpfile/src/main/cpp/: CMakeLists.txt  tmpfile.cpp
android/tmpfile/src/main/java/com/viliussutkus89/tmpfile/: Tmpfile.java  TmpfileInitProvider.java
android/tmpfile/src/main/res/values/: strings.xml
ci-scripts/: emulator_matrix_generator.py  getVersion  incrementVersion  prepareLibraryTestsForStagingRepository  prepareSampleAppForStagingRepository  updateDownstreamVersion
gradle/wrapper/: gradle-wrapper.properties
include/: tmpfile.h
lib/: build.gradle  proguard-rules.pro
lib/src/androidTest/java/com/viliussutkus89/android/tmpfile/tests/: StandaloneEXEInstrumentedTests.java
lib/src/main/: AndroidManifest.xml
lib/src/main/cpp/: CMakeLists.txt  libTests.exe.cpp  tmpfile.cpp
lib/src/main/java/com/viliussutkus89/android/tmpfile/: Tmpfile.java
sampleapp/: build.gradle  gradle.properties  settings.gradle
sampleapp/app/: .gitignore  build.gradle  proguard-rules.pro
sampleapp/app/libs/: .gitignore
sampleapp/app/src/main/: AndroidManifest.xml
sampleapp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
sampleapp/app/src/main/java/com/viliussutkus89/android/tmpfile/sampleapp/: MainActivity.java  MyApplication.java
sampleapp/app/src/main/java/com/viliussutkus89/tmpfile/sampleapp/: MainActivity.java
sampleapp/app/src/main/res/layout/: activity_main.xml
sampleapp/app/src/main/res/values/: strings.xml
sampleapp/gradle/wrapper/: gradle-wrapper.properties
scripts/: getVersion  incrementVersion  prepareAarInstrumentedTests  prepareLibraryTestsForStagingRepository  prepareSampleAppForStagingRepository  prepareSampleAppForUnpublishedLib.sh
src/: tmpfile.cpp
tests/: build.gradle
tests/src/androidTest/cpp/: CMakeLists.txt  libTests.exe.cpp  nativeUnitTests.cpp
tests/src/androidTest/java/com/viliussutkus89/android/tmpfile/tests/: NoLeftoverTmpfiles.java  StandaloneEXEInstrumentedTests.java  TmpfileInstrumentedTests.java  TmpfileTestSuite.java
tests/src/androidTest/java/com/viliussutkus89/tmpfile/tests/: NoLeftoverTmpfiles.java  NoLeftoverTmpfilesAfterTests.java  TmpfileInstrumentedTests.java  TmpfileTestSuite.java
tests/src/main/: AndroidManifest.xml
tests/src/main/cpp/: CMakeLists.txt  nativeUnitTests.cpp
tmpfile/: build.gradle
tmpfile/src/androidTest/java/com/viliussutkus89/android/tmpfile/tests/: TmpfileTestSuite.java
tmpfile/src/main/: AndroidManifest.xml
tmpfile/src/main/cpp/: CMakeLists.txt  mkdirs_for_file.c  mkdirs_for_file.h  strcat_path_array.c  strcat_path_array.h  tmpfile.c  tmpfile.cpp  tmpfile.h  tmpfile_jni.c
tmpfile/src/main/java/com/viliussutkus89/android/tmpfile/: Tmpfile.java
tmpfile/src/main/java/com/viliussutkus89/tmpfile/: Tmpfile.java
